// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NcrlJsonAccessor patching JSON file 1`] = `
"{
  "build": {
    "production": {
      "env": {
        "TEST": "123",
        "ABC": "456"
      }
    }
  }
}
"
`;

exports[`NcrlJsonAccessor patching JSON5 file (preserves comments) 1`] = `
"{
  "build": {
    "production": {
      // comment
      "env": {
        "TEST": "123",
        ABC: "456"
      }
    }
  }
}
"
`;
